syntax = "proto3";
package Replica;

option go_package = "./Replica";

service ReplicaService{
    rpc CheckStatus (EmptyRequest) returns (StatusResponse);
    rpc WriteToLog (Auction) returns (AuctionAck);
    // muligvis add en killserver() for at kunne test
}


message EmptyRequest{}

message AuctionAck {  
    Auction bid = 1;
    string msg = 2;
    // timestamp pls
}

message Auction {
    int32 bid = 1 ;
    int32 bidId = 2; 
    // timestamp pls
}

message StatusResponse{
    int32 serverId = 1;
    string msg = 2;
}
